Changes in version 12.2, 18/03/2024
===================================

* RiemannR.cpp: Fix infinite loop on Linux i386,
  see https://github.com/kimwalisch/primecount/issues/66.

Changes in version 12.1, 09/03/2024
===================================

CMakeLists.txt: Fix undefined reference to pthread_create #146.
PrimeSieve.cpp: Improve status output.
src/app/test.cpp: Fix -ffast-math failure.
test/count_primes2.cpp: Fix -ffast-math failure.
test/Riemann_R.cpp: Fix musl libc issue #147.

Changes in version 12.0, 17/02/2024
===================================

* stressTest.cpp: New --stress-test[=MODE] command-line option.
* RiemannR.cpp: Faster Riemann R function implementation #144.
* CmdOptions.cpp: New -R && --RiemannR command line options.
* CmdOptions.cpp: New --RiemannR-inverse command line option.
* CmdOptions.cpp: Add new --timeout option for stress testing.
* main.cpp: Improve command-line option handling.

Changes in version 11.2, 08/01/2024
===================================

* nthPrime.cpp: Rewritten using faster nth prime approximation.
* nthPrimeApprox.cpp: Logarithmic integral and Riemann R implementations.
* cmake/libatomic.cmake: Fix failed to find libatomic #141.
* .github/workflows/ci.yml: Port AppVeyor CI tests to GitHub Actions.
* doc/C_API.md: Fix off by 1 error in OpenMP example #137.
* doc/CPP_API.md: Fix off by 1 error in OpenMP example #137.
* Vector.hpp: Rename pod_vector to Vector and pod_array to Array.
* iterator.h: Improve documentation.
* iterator.hpp: Improve documentation.
* C_API.md: Add SIMD (vectorization) section.
* CPP_API.md: Add SIMD (vectorization) section.
* README.md: Add C & C++ API badges.

Changes in version 11.1, 12/05/2023
===================================

When primesieve is distributed via distro package managers, it is often
not compiled using the highest optimization level -O3. Because of this
primesieve's pre-sieving algorithm was not auto-vectorized in many