@@ -3,6 +3,7 @@ Changes in version 12.2, 18/03/2024
 
 * RiemannR.cpp: Fix infinite loop on Linux i386,
   see https://github.com/kimwalisch/primecount/issues/66.
+* test/Riemann_R.cpp: Add more tests.
 
 Changes in version 12.1, 09/03/2024
 ===================================
